<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>time_checker_msgs</name>
  <version>0.0.0</version>
  <description>Message and service definitions for time_checker</description>
  <maintainer email="issei.tezuka@tier4.jp">isseitezuka</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>